objects/BenefitSession.object
<CustomObject>
    <fields>
        <fullName>Attendance_Rate__c</fullName>
        <formula>NGO_CaseMan_Total_Attended__c / (NGO_CaseMan_Total_Attended__c + NGO_CaseMan_Total_Unattended__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Attendance_Summary__c</fullName>
        <formula>TEXT(ROUND(Attendance_Rate__c * 100, 2)) &amp; &quot;% (&quot; &amp;TEXT(NGO_CaseMan_Total_Attended__c)&amp;&quot; Attended / &quot;&amp;TEXT(NGO_CaseMan_Total_Unattended__c)&amp;&quot; Absent)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External ID used for data manipulation and reference across orgs.

Created by Brian Ricter on 11/17/2022</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID used for data manipulation and reference across orgs.

Created by Brian Ricter on 11/17/2022</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGO_CaseMan_Attendance_Rate__c</fullName>
        <formula>NGO_CaseMan_Total_Attended__c / (NGO_CaseMan_Total_Attended__c + NGO_CaseMan_Total_Unattended__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NGO_CaseMan_Attendance_Summary__c</fullName>
        <formula>TEXT(ROUND(NGO_CaseMan_Attendance_Rate__c * 100, 0)) &amp; &quot;% (&quot; &amp;TEXT(NGO_CaseMan_Total_Attended__c)&amp;&quot; Attended / &quot;&amp;TEXT(NGO_CaseMan_Total_Unattended__c)&amp;&quot; Absent)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGO_CaseMan_Total_Attended__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NGO_CaseMan_Total_Enrolled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Enrolled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NGO_CaseMan_Total_Unattended__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Unattended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Absent_Benefit_Disbursements__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Absent Benefit Disbursements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Attended_Benefit_Disbursements__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Attended Benefit Disbursements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>